[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/SettingsScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ChatScreen.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]

script/script = ExtResource( 1 )
PORT = 8000

[node name="SettingsScreen" parent="." instance=ExtResource( 2 )]

[node name="ChatScreen" parent="." instance=ExtResource( 3 )]

visibility/visible = false

[node name="ErrorDialog" type="AcceptDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 40.0
margin/right = 1000.0
margin/bottom = 570.0
popup/exclusive = false
window/title = "Error"
dialog/hide_on_ok = true

[node name="ConnectionTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[connection signal="connect" from="SettingsScreen" to="." method="_on_SettingsScreen_connect"]

[connection signal="send_message" from="ChatScreen" to="." method="_on_ChatScreen_send_message"]

[connection signal="timeout" from="ConnectionTimer" to="." method="_on_ConnectionTimer_timeout"]


